force-app/main/default/objects/Integration_Files__c/Integration_Files__c.object-meta.xml
<CustomObject>
    <label>Integration Files</label>
    <nameField>
        <displayFormat>File-{0000}</displayFormat>
        <label>Integration Files Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>