force-app/main/default/objects/Integration_Files__c/fields/Failed_records__c.field-meta.xml
<CustomField>
    <fullName>Failed_records__c</fullName>
    <formula>Mass_Upload_CSV__r.Error_records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Failed records</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>