force-app/main/default/objects/Integration_Files__c/fields/Mass_Upload_CSV__c.field-meta.xml
<CustomField>
    <fullName>Mass_Upload_CSV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mass Upload CSV</label>
    <referenceTo>Mass_Upload_CSV__c</referenceTo>
    <relationshipLabel>Integration Files</relationshipLabel>
    <relationshipName>Integration_Files</relationshipName>
    <type>Lookup</type>
</CustomField>