force-app/main/default/objects/Integration_Files__c/fields/Process_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Process_DateTime__c</fullName>
    <formula>Mass_Upload_CSV__r.LastModifiedDate</formula>
    <label>Process DateTime</label>
    <type>Date</type>
</CustomField>