force-app/main/default/objects/Integration_Files__c/fields/Success_Records__c.field-meta.xml
<CustomField>
    <fullName>Success_Records__c</fullName>
    <formula>Mass_Upload_CSV__r.Success_records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Records</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>