force-app/main/default/objects/Integration_Files__c/fields/Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Records__c</fullName>
    <formula>Mass_Upload_CSV__r.Total_records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>