force-app/main/default/objects/Integration_Files__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mass_Upload_CSV__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Folder_Name__c</columns>
    <columns>File_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>